--- a/src/app/components/account/components/expense/expense-list/expense-detail/expense-detail.component.html
+++ b/src/app/components/account/components/expense/expense-list/expense-detail/expense-detail.component.html
@@ -21,7 +21,7 @@
             </div>
             <div>
               <span>-{{item.amount}}元</span>
-              <span>{{item.fundWayName}}</span>
+              <span>{{item.fundChannelName}}</span>
             </div>
           </li>
         </ul>
