--- a/src/app/core/components/fundAccount/fund-account-select/fund-account-select.component.html
+++ b/src/app/core/components/fundAccount/fund-account-select/fund-account-select.component.html
@@ -2,7 +2,7 @@
   <label>
     {{title}}:
   </label>
-  <div class="select" id="fundAccount-list" blankClick>
+  <div class="select">
     <input type="text" name="fundAccount" [(ngModel)]="fundAccount" disabled placeholder="请选择资金账户">
     <i class="down-triangle"></i>
   </div>
