--- a/src/app/core/components/income-category/incomeCategory-select/incomeCategory-select.component.html
+++ b/src/app/core/components/income-category/incomeCategory-select/incomeCategory-select.component.html
@@ -2,7 +2,7 @@
   <label>
     {{title}}:
   </label>
-  <div class="select" id="incomeCategory-list" blankClick>
+  <div class="select">
     <input type="text" name="incomeCategory" [(ngModel)]="incomeCategory" disabled placeholder="请选择收入类别">
     <i class="down-triangle"></i>
   </div>
