--- a/src/app/core/components/fundAccount/fund-account-add-edit/fund-account-add-edit.component.html
+++ b/src/app/core/components/fundAccount/fund-account-add-edit/fund-account-add-edit.component.html
@@ -7,18 +7,12 @@
       </label>
       <div>
         <div #divClick class="select">
-          <input disabled placeholder="请绑定渠道">
+          <input disabled placeholder="请绑定渠道" name="fundChannelName" [(ngModel)]="fundChannelName">
           <i class="down-triangle"></i>
         </div>
         <ul #ulClick [style.display]="isListShow?'block':'none'">
-          <li>
-            <input type="checkbox"> <span>微信</span>
-          </li>
-          <li>
-            <input type="checkbox"> <span>支付宝</span>
-          </li>
-          <li>
-            <input type="checkbox"> <span>银联</span>
+          <li *ngFor="let item of fundChannelList">
+            <input type="checkbox" [ngModel]="item.selected" name="selected" (ngModelChange)="select($event,item)"><span>{{item?.name}}</span>
           </li>
         </ul>
       </div>
