--- a/src/app/core/components/fundAccount/fund-account-add-edit/fund-account-add-edit.component.scss
+++ b/src/app/core/components/fundAccount/fund-account-add-edit/fund-account-add-edit.component.scss
@@ -51,6 +51,9 @@ main {
       border-bottom: 1px dashed #000;
       height: 20px;
       cursor: pointer;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
     }
 
   }
