报表模块&过滤

--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -7,7 +7,12 @@
         <li (click)="toIncome()">收入</li>
       </ul>
     </li>
-    <li>报表</li>
+    <li>报表
+      <ul>
+        <li (click)="toExpenseDetail()">支出明细</li>
+        <li>支出汇总</li>
+      </ul>
+    </li>
     <li>设置</li>
   </ul>
   <button (click)="logout()">退 出</button>
