打包&改动报表过滤条件

--- a/src/app/components/report/components/common/report-filter/report-equal/report-equal.component.html
+++ b/src/app/components/report/components/common/report-filter/report-equal/report-equal.component.html
@@ -1,8 +1,12 @@
 <!-- <button (click)="butClick()">测 试</button> -->
 <main>
-  <div (click)="divClick()">
+  <div #selectOption>
     {{placeholder}}
     <label [style.display]="labelShow?'inline-block':'none'">{{data.name}}</label>
+    <i (click)="del($event)"></i>
   </div>
-  <!-- {{data.name}} -->
+  <ul #optionULSelect [style.display]="isListShow?'block':'none'">
+    <li *ngFor="let item of list; let i=index"><input type="checkbox" [ngModel]="item.selected" (ngModelChange)="select($event,item)"
+        [name]="'selected'+i+data.code">{{item.name}}</li>
+  </ul>
 </main>
