--- a/src/app/components/report/components/expense/expense-detail/expense-detail.component.html
+++ b/src/app/components/report/components/expense/expense-detail/expense-detail.component.html
@@ -4,4 +4,11 @@
   <p>
     expense-detail works!
   </p>
+  <ag-grid-angular 
+    style="width: 500px; height: 500px;" 
+    class="ag-theme-balham"
+    [rowData]="rowData" 
+    [columnDefs]="columnDefs"
+    >
+</ag-grid-angular>
 </main>
