--- a/src/app/components/report/components/common/report-filter/report-equal/report-equal.component.scss
+++ b/src/app/components/report/components/common/report-filter/report-equal/report-equal.component.scss
@@ -1,11 +1,32 @@
 :host {
   height: 32px;
-  margin: 10px 2px;
+  margin: 10px 5px;
   box-sizing: border-box;
 }
 
 main {
   height: 100%;
+}
+
+ul {
+  max-height: 125px;
+  overflow-y: auto;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, .2), 0 4px 5px 0 rgba(0, 0, 0, .14), 0 1px 10px 0 rgba(0, 0, 0, .12);
+  background: #fff;
+
+  li {
+    height: 32px;
+    line-height: 32px;
+    cursor: pointer;
+    padding: 0 10px;
+
+    &:hover {
+      background: #f5f5f5;
+    }
+  }
 }
 
 div {
@@ -18,13 +39,30 @@ div {
   border: 1px solid;
   box-sizing: border-box;
   cursor: pointer;
-  // input {
-  //   height: 100%;
-  //   box-sizing: border-box;
-  //   border: 1px solid;
-  //   outline: none;
-  //   padding-left: 5px;
-  // }
+
+  &:hover {
+    i {
+      display: inline-flex;
+    }
+  }
+
+  i {
+    display: none;
+    position: absolute;
+    top: -10px;
+    right: -6px;
+    width: 15px;
+    height: 15px;
+    background: red;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    cursor: pointer;
+
+    &::before {
+      content: '×';
+    }
+  }
 
   label {
     display: none;
