--- a/src/app/components/report/components/common/report-filter/report-equal/report-equal.component.scss
+++ b/src/app/components/report/components/common/report-filter/report-equal/report-equal.component.scss
@@ -16,7 +16,7 @@ ul {
   list-style: none;
   box-shadow: 0 2px 4px -1px rgba(0, 0, 0, .2), 0 4px 5px 0 rgba(0, 0, 0, .14), 0 1px 10px 0 rgba(0, 0, 0, .12);
   background: #fff;
-
+  z-index: 10000;
   li {
     height: 32px;
     line-height: 32px;
