--- a/src/app/core/components/fundAccount/fund-account-add-edit/fund-account-add-edit.component.html
+++ b/src/app/core/components/fundAccount/fund-account-add-edit/fund-account-add-edit.component.html
@@ -43,7 +43,7 @@
         <label>
           信用额度:
         </label>
-        <input type="number" name="creditAmount" [(ngModel)]="creditAccount.creditAmount">
+        <input type="number" name="creditAmount" [ngModel]="creditAccount.creditAmount" (ngModelChange)="setCreditAmount($event)">
       </div>
 
       <div class="input">
