--- a/src/app/core/components/nav/nav.component.scss
+++ b/src/app/core/components/nav/nav.component.scss
@@ -1,10 +1,41 @@
 main {
   width: 160px;
   height: 100%;
-  border: 1px solid red;
+  background-color: #fafafa;
+  -webkit-app-region: no-drag;
 
   li,
   button {
     cursor: pointer;
   }
+
+  a {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  li span {
+    display: flex;
+    align-items: center;
+
+  }
+}
+
+main>ul {
+  padding-left: 10px;
+}
+
+.nav-item {
+  position: relative;
+}
+
+.selected:before {
+  content: '';
+  position: absolute;
+  left: -4px;
+  top: 6px;
+  border-left: 2px solid #3457dd;
+  height: 20px;
 }
