--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,15 @@ body {
   width: 100%;
   height: 100%;
   overflow: hidden;
+  -webkit-app-region: drag
+}
+
+button,
+input,
+ul,
+li,
+textarea {
+  -webkit-app-region: no-drag;
 }
 
 label {
@@ -75,6 +84,6 @@ button {
   // border-bottom: 1px solid #dedede !important;
 }
 
-.ag-ltr .ag-cell-focus{
+.ag-ltr .ag-cell-focus {
   border: 1px solid #0091EA !important;
 }
