--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -5,47 +5,47 @@
     <li class="nav-item">
       <span>
         <i class="fa fa-home" aria-hidden="true"></i>
-        <a href="#">首页</a>
+        <a>首页</a>
       </span>
     </li>
     <li class="nav-item active">
       <span>
         <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-        <a href="#">记账 <i class="icon icon-arrow-down"></i></a>
+        <a>记账 <i class="icon icon-arrow-down"></i></a>
       </span>
       <ul class="nav">
-        <li class="nav-item selected">
-          <a href="#">支出</a>
+        <li class="nav-item selected" (click)="toExpense()">
+          <a>支出</a>
+        </li>
+        <li class="nav-item" (click)="toIncome()">
+          <a>收入</a>
         </li>
         <li class="nav-item">
-          <a href="#">收入</a>
+          <a>借还</a>
         </li>
         <li class="nav-item">
-          <a href="#">借还</a>
-        </li>
-        <li class="nav-item">
-          <a href="#">转账</a>
+          <a>转账</a>
         </li>
       </ul>
     </li>
     <li class="nav-item">
       <span>
         <i class="fa fa-area-chart" aria-hidden="true"></i>
-        <a href="#">报表 <i class="icon icon-arrow-right"></i></a>
+        <a>报表 <i class="icon icon-arrow-right"></i></a>
       </span>
-      <ul class="nav d-hide" >
+      <ul class="nav d-hide">
         <li class="nav-item">
-          <a href="#">支出明细</a>
+          <a>支出明细</a>
         </li>
         <li class="nav-item">
-          <a href="#">支出汇总</a>
+          <a>支出汇总</a>
         </li>
       </ul>
     </li>
     <li class="nav-item">
       <span>
         <i class="fa fa-cog" aria-hidden="true"></i>
-        <a href="#">设置</a>
+        <a>设置</a>
       </span>
     </li>
   </ul>
