--- a/src/app/components/account/components/expense/expense-add-edit/expense-add-edit.component.scss
+++ b/src/app/components/account/components/expense/expense-add-edit/expense-add-edit.component.scss
@@ -2,10 +2,24 @@
   flex-grow: 1;
 }
 
+main {
+  display: flex;
+  -webkit-app-region: no-drag;
+  margin: 10px;
+}
+
 ul,
 li {
   margin: 0;
   padding: 0;
+}
+
+section {
+  flex-grow: 1;
+  position: relative;
+  left: -1px;
+  padding: 20px;
+  width: 200PX;
 }
 
 input[type="date"] {
@@ -17,33 +31,17 @@ input[type="date"] {
 }
 
 main {
+  height: 100%;
+
   .expense-book {
-    display: flex;
-    align-items: stretch;
-    padding: 0 20px;
-    margin: 4px 0 10px 0;
-
-    ul {
-      display: inline-flex;
-      overflow: auto;
-      flex-grow: 1;
-      width: 200px;
-
-      li {
-        margin-right: 20px;
-        display: inline-flex;
-        white-space: nowrap;
-        cursor: pointer;
-        height: 40px;
-        align-items: center;
-        /* text-align: center; */
-        padding: 0 10px;
-      }
-    }
+    width: 100px;
+    height: 100%;
+    float: left;
+    overflow-y: hidden;
   }
 
   form {
-    padding: 0 20px;
+    // padding: 0 20px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(7, 1fr);
