--- a/src/app/core/components/expenseBook/expense-book-list/expense-book-list.component.html
+++ b/src/app/core/components/expenseBook/expense-book-list/expense-book-list.component.html
@@ -10,7 +10,7 @@
   </ul>
 
   <div (click)="addExpenseBook()">
-    <i class="icon icon-plus"></i>
+    <!-- <i class="icon icon-plus"></i> -->
     <span>
       添加账本
     </span>
