--- a/src/app/core/components/addreess/address-select/address-select.component.html
+++ b/src/app/core/components/addreess/address-select/address-select.component.html
@@ -1,19 +1,37 @@
-<main>
+<!-- <main>
   <label>
     {{title}}:
   </label>
-  <!-- id="address-select"  blankClick-->
   <div class="select"  >
     <input type="text" name="address" [(ngModel)]="address" disabled placeholder="请选择地点">
     <i class="down-triangle"></i>
   </div>
   <div class="ul-select" *ngIf="isListShow">
     <ul>
-      <li (click)="select(item)" *ngFor="let item of addressList">
+      <li (click)="select(item)" *ngFor="let item of list">
         {{item?.province}}|{{item?.city}}|{{item?.area}}
       </li>
     </ul>
     <div class="add" (click)="add()">添加地点</div>
   </div>
-
+</main> -->
+<main>
+  <form>
+    <div class="form-item">
+      <label class="form-label" for="input-example-1">{{title}}</label>
+      <div class="has-icon-left" #addressListEle>
+        <input type="text" class="form-input" placeholder="请选择地点" name="address" [(ngModel)]="address"
+          autocomplete="off" id="address-list">
+        <i class="form-icon icon icon-location" aria-hidden="true"></i>
+      </div>
+      <ul class="menu" *ngIf="ulShow">
+        <li class="menu-item" *ngFor="let item of list" (click)="select(item)">
+          <a>{{item?.province}}|{{item?.city}}|{{item?.area}}</a>
+        </li>
+        <li class="menu-item add">
+          <button class="btn btn-primary btn-sm" (click)="add()"><i class="icon icon-plus"></i> 添加地点</button>
+        </li>
+      </ul>
+    </div>
+  </form>
 </main>
