--- a/src/app/core/components/fund-party/fund-party-select/fund-party-select.component.html
+++ b/src/app/core/components/fund-party/fund-party-select/fund-party-select.component.html
@@ -1,4 +1,4 @@
-<main>
+<!-- <main>
   <label>
     {{title}}:
   </label>
@@ -15,4 +15,26 @@
     </ul>
     <div class="add" (click)="add()">添加付款方</div>
   </div>
+</main> -->
+
+<main>
+  <form>
+    <div class="form-item">
+      <label class="form-label" for="input-example-1">{{title}}</label>
+      <div class="has-icon-left" #fundPartyListEle>
+        <input type="text" class="form-input" placeholder="请选择收款方" name="fundParty" [(ngModel)]="fundParty"
+          autocomplete="off" id="fundParty-list">
+        <!-- <i class="fa fa-share" aria-hidden="true"></i> -->
+        <i class="form-icon fa fa-share" aria-hidden="true"></i>
+      </div>
+      <ul class="menu" *ngIf="ulShow">
+        <li class="menu-item" *ngFor="let item of list" (click)="select(item)">
+          <a>{{item?.name}}</a>
+        </li>
+        <li class="menu-item add">
+          <button class="btn btn-primary btn-sm" (click)="add()"><i class="icon icon-plus"></i> 添加收款方</button>
+        </li>
+      </ul>
+    </div>
+  </form>
 </main>
