--- a/src/app/core/components/fundAccount/fund-account-select/fund-account-select.component.html
+++ b/src/app/core/components/fundAccount/fund-account-select/fund-account-select.component.html
@@ -1,4 +1,4 @@
-<main>
+<!-- <main>
   <label>
     {{title}}:
   </label>
@@ -18,4 +18,26 @@
     </ul>
     <div class="add" (click)="add()">添加资金账户</div>
   </div>
+</main> -->
+
+<main>
+  <form>
+    <div class="form-item">
+      <label class="form-label" for="input-example-1">{{title}}</label>
+      <div class="has-icon-left" #fundAccountListEle>
+        <input type="text" class="form-input" placeholder="请选择付款账户" name="fundAccount" [(ngModel)]="fundAccount"
+          autocomplete="off" id="fundAccount-list">
+        <i class="form-icon fa fa-folder-open" aria-hidden="true"></i>
+      </div>
+      <ul class="menu" *ngIf="ulShow">
+        <li class="menu-item" *ngFor="let item of list" (click)="select(item)">
+          <a>{{item?.name}}</a>
+          <a>{{item?.balance}}</a>
+        </li>
+        <li class="menu-item add">
+          <button class="btn btn-primary btn-sm" (click)="add()"><i class="icon icon-plus"></i> 添加付款账户</button>
+        </li>
+      </ul>
+    </div>
+  </form>
 </main>
